@@ -1,3 +1,0 @@
-IO::Socket::INET6 provides an object interface to creating and using sockets
-in either AF_INET or AF_INET6 domains. It is built upon the IO::Socket
-interface and inherits all the methods defined by IO::Socket.
